// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack style params direction column 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-1hw1u3j-QxStack-root"
    data-testid="testStyleParams-direction-column"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params direction row 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_row QxStack_alignItems_center QxStack_spacing_8px css-14aru8s-QxStack-root"
    data-testid="testStyleParams-direction-row"
  >
    <div
      class="QxStack-item css-1a8yhwq-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-1a8yhwq-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params inline false 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-1hw1u3j-QxStack-root"
    data-testid="testStyleParams-inline-false"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params inline true 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_inline QxStack_spacing_8px css-hbggc1-QxStack-root"
    data-testid="testStyleParams-inline-true"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params order default 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-1hw1u3j-QxStack-root"
    data-testid="testStyleParams-order-default"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params order reverse 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_reverse QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-1who0oy-QxStack-root"
    data-testid="testStyleParams-order-reverse"
  >
    <div
      class="QxStack-item css-1rul15c-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-1rul15c-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 2em 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_2em css-c3dwbi-QxStack-root"
    data-testid="testStyleParams-spacing-2em"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 8px 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-1hw1u3j-QxStack-root"
    data-testid="testStyleParams-spacing-8px"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 16px 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_16px css-ktckl7-QxStack-root"
    data-testid="testStyleParams-spacing-16px"
  >
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      1
    </div>
    <div
      class="QxStack-item css-hvqine-QxStack-item"
    >
      2
    </div>
  </div>
</DocumentFragment>
`;
